--- a/env.yaml
+++ b/env.yaml
@@ -18,7 +18,7 @@ environments:
         api2:
           instanceConcurrency: 10
   - access: fc_cn
-    name: prod
+    name: uat
     description: 'production environment'
     type: production
     overlays:
@@ -28,3 +28,21 @@ environments:
           functionName: ${source.functionName}-${this.project}-${this.name}
           timeout: 50
           instanceConcurrency: 1
+  - access: default
+    name: prod
+    overlays:
+      resources:
+        api1:
+          functionName: api1-prod
+          timeout: 100
+          vpcConfig: auto # 也可以指定自己的VPC
+          customRuntimeConfig:
+            args:
+              - --env=pre
+        api2:
+          functionName: api2-prod
+          instanceConcurrency: 10
+          vpcConfig: auto # 也可以指定自己的VPC
+        
+
+         
