--- a/env.yaml
+++ b/env.yaml
@@ -17,6 +17,10 @@ environments:
           timeout: 100
         api2:
           instanceConcurrency: 10
+          # 修改启动参数，注入env信息
+          customRuntimeConfig:
+            args:
+              - --env=testing 
   - access: fc_cn
     name: uat
     description: 'production environment'
@@ -36,13 +40,14 @@ environments:
           functionName: api1-prod
           timeout: 100
           vpcConfig: auto # 也可以指定自己的VPC
-          customRuntimeConfig:
-            args:
-              - --env=pre
         api2:
           functionName: api2-prod
           instanceConcurrency: 10
           vpcConfig: auto # 也可以指定自己的VPC
+          # 修改启动参数，注入env信息
+          customRuntimeConfig:
+            args:
+              - --env=prod 
         
 
          
